2009-01-25	Jannis Pohlmann <jannis@xfce.org>

	* == 4.5.99.1 released! ==
	* NEWS: Update NEWS for the release.
	* configure.in.in: Bump version and dependencies and remove 'svn'
	  version tag.

2009-01-23	Jannis Pohlmann <jannis@xfce.org>

	* COPYING: Add GFDL 1.1 as requested by Michael Casadevall from
	  Xubuntu.

2009-01-14	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Post-release version bump.

2009-01-11	Jannis Pohlmann <jannis@xfce.org>

	* == 4.5.93 released! ==
	* configure.in.in: Bump version and dependencies and remove 'svn'
	  version tag.

2009-01-10	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS for the upcoming 4.5.93 (Xfce 4.6 beta3) release.

2009-01-06	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu.c, libxfce4menu/xfce-menu-item-cache.c:
	  Review strings.

2009-01-02	Nick Schermer <nick@xfce.org>

	* libxfce4menu/xfce-menu-item-cache.c,
	  libxfce4menu/xfce-menu-separator.c: Add weak pointer to 
	  XfceMenuItemCache and XfceMenuSeparator so you can init and shutdown
	  the library multiple times without running into trouble.
	* NEWS: Update.

2008-12-06	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Re-add svn version tag.

2008-12-04	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu.c: Always use xfce_menu_get_element() when
	  comparing two menu elements instead of handling menus and items
	  in different ways.
	* libxfce4menu/xfce-menu-item.c: Minor cleanup of the
	  XfceMenuElement functions.
	* tests/test-display-menu.c: Always use xfce_menu_get_element(), never
	  use xfce_menu_item_get_name() directly.

2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* == 4.5.92 released ==
	* configure.in.in: Bump version and update dependencies.
	* NEWS: Update NEWS file.

2008-10-29	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/libxfce4menu-config.h.in,
	  libxfce4menu/xfce-menu-item.c: Fix copyright header.

2008-10-14	Stephan Arts <stephan@xfce.org>

	* NEWS: Updated for the beta1 release.
