@@ -1,6 +1,6 @@
 libxfce4menu's source code is licensed under the LGPLv2,
-while its documentation is licensed under the GFDL 1.1.
-The text of both licenses follow:
+while its documentation is licensed under the GFDL 1.1 (with no 
+invariant sections). The text of both licenses follow:
 
 		  GNU LIBRARY GENERAL PUBLIC LICENSE
 		       Version 2, June 1991
